Tue Sep 11 21:35:06 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tests/transport/error_handling/main.cpp:

          Fix so test runs under static builds.

Tue Sep 11 14:42:53 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Use RcHandle/RcObject to manage the WriterInfo objects.  This allows
          writer_activity() to use the WriterInfo after remove_associations()
          has removed it from the map.

Wed Sep  5 22:07:45 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/CPPTemplate.txt:

          The generated 2-arg FooDataReaderImpl::lookup_instance() needs to
          check the header for key_fields_only_.

        * tests/DCPS/Deadline/publisher.cpp:

          Updated expected values for number of deadlines missed during a 9
          second sleep (2 deadline periods).

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/Watchdog.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Corrected doxygen comment and log message.

Tue Sep  4 22:00:50 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          The 2-arg form of DataReader::lookup_instance() requires its own
          duplicated message block, because it deserializes (moves rd_ptr).

        * dds/DCPS/OfferedDeadlineWatchdog.cpp:
        * dds/DCPS/RequestedDeadlineWatchdog.cpp:

          Cancelling a timer in the reactor can't be done with a lock held,
          if that same lock is used by handle_timeout.  Doing that can
          deadlock the reactor because its own internal lock is held during
          the handle_timeout upcall and also used by cancel_timer.

        * tests/DCPS/Ownership/publisher.cpp:
        * tests/DCPS/Ownership/run_test.pl:
        * tests/DCPS/Ownership/subscriber.cpp:

          Correctly initialize "infinite" constants for deadline and liveliness